--- a/Twipster For Chrome/twipster.css
+++ b/Twipster For Chrome/twipster.css
@@ -234,3 +234,7 @@ body {
 .with-media-forward.opened-tweet .cards-base .media-forward {
     max-height: none !important;
 }
+
+.moments {
+    display: none;
+}
